--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#cesiumContainer {
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(156, 197, 220);
+  z-index: 100;
+}
