--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 #cesiumContainer {
   width: 100%;
-  height: 50%;
+  height: 50% !important;
   background-color: rgb(156, 197, 220);
   z-index: 100;
 }
